force-app/main/default/objects/Question_Response__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Storing User answers</description>
    <label>Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>