force-app/main/default/objects/Question_Response__c/fields/Answer_Long__c.field-meta.xml
<CustomField>
    <fullName>Answer_Long__c</fullName>
    <description>To increase length of answer (Text).</description>
    <label>Answer Long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>