force-app/main/default/objects/Question_Response__c/fields/Contact_Edition_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Contact_Edition_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to manage uniqueness of the form submitted by user</description>
    <label>Contact Edition Mapping</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Question Response</relationshipLabel>
    <relationshipName>Question_Response</relationshipName>
    <type>Lookup</type>
</CustomField>