force-app/main/default/objects/Question_Response__c/fields/Form_Response_Entry__c.field-meta.xml
<CustomField>
    <fullName>Form_Response_Entry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Form Response Entry</label>
    <referenceTo>Form_Response_Entry__c</referenceTo>
    <relationshipLabel>Question Response</relationshipLabel>
    <relationshipName>Question_Response</relationshipName>
    <type>Lookup</type>
</CustomField>