force-app/main/default/objects/Question_Response__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Question Response</relationshipLabel>
    <relationshipName>Question_Response</relationshipName>
    <type>Lookup</type>
</CustomField>