force-app/main/default/objects/Question_Response__c/fields/Question_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Question_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Question Questionnaire</description>
    <label>Question Questionnaire</label>
    <referenceTo>Question_Questionnaire__c</referenceTo>
    <relationshipLabel>Question Response</relationshipLabel>
    <relationshipName>Question_Response</relationshipName>
    <type>Lookup</type>
</CustomField>