force-app/main/default/objects/Question_Response__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Questionnaire</description>
    <label>Form Template</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Question Response</relationshipLabel>
    <relationshipName>Question_Response</relationshipName>
    <type>Lookup</type>
</CustomField>