force-app/main/default/objects/Question_Response__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Internal or Community Users.</description>
    <inlineHelpText>Salesforce Internal or Community Users.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Question_Response</relationshipName>
    <type>Lookup</type>
</CustomField>