force-app/main/default/objects/Question_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Questionnaire__c</columns>
    <columns>Questionnaire__c</columns>
    <columns>Question__c</columns>
    <columns>User__c</columns>
    <columns>Answer__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>